--- a/ChaosgateKoreanPatch/Views/MainWindow.axaml
+++ b/ChaosgateKoreanPatch/Views/MainWindow.axaml
@@ -46,7 +46,7 @@
 				<ColumnDefinition Width="auto" />
 			</Grid.ColumnDefinitions>
 			<ProgressBar Grid.Column="0" Classes="GridItem" VerticalAlignment="Stretch" Minimum="0" Maximum="13" Value="{Binding Progress}"/>
-			<Button Grid.Column="1" Classes="GridItem" Content="패치" IsEnabled="{Binding PatchAvailable}" Command="{Binding Patch}"/>
+			<Button Grid.Column="1" Classes="GridItem" Content="패치" Command="{Binding PatchCommand}"/>
 		</Grid>
 	</Grid>
 
